# pulumi-aws-serverless-app

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  pyproject.toml  requirements.txt
projects/aurora/: Pulumi.development.yaml  Pulumi.production.yaml  Pulumi.yaml  __main__.py  requirements.txt
projects/backend/review-api/: api.py  piccolo_conf.py  pyproject.toml
projects/backend/review-api/db/: reviews_conf.py  tables.py
projects/backend/review-api/db/piccolo_migrations/: README.md
projects/backend/review-api/deployment/: Pulumi.yaml  __main__.py
projects/backend/reviews-api/: Dockerfile  api.py  piccolo_conf.py
projects/backend/reviews-api/db/: tables.py
projects/backend/reviews-api/deployment/: Pulumi.yaml  __main__.py  requirements.txt
projects/backend/users-api/: Dockerfile  api.py  piccolo_conf.py  pyproject.toml
projects/backend/users-api/db/: tables.py  (+1 more)
projects/certificates/: Pulumi.production.yaml  Pulumi.yaml  __main__.py  requirements.txt
projects/ecs/: Pulumi.development.yaml  Pulumi.production.yaml  Pulumi.yaml  __main__.py
projects/ecs_fargate/: Pulumi.yaml  __main__.py  requirements.txt
projects/github/: Pulumi.development.yaml  Pulumi.production.yaml  Pulumi.yaml  __main__.py  requirements.txt
projects/load_balancer/: Pulumi.production.yaml  Pulumi.yaml  __main__.py
projects/users_api/: __main__.py  requirements.txt
projects/users_api/api/: Dockerfile  api.py
projects/vpc/: Pulumi.production.yaml  Pulumi.staging.yaml  Pulumi.yaml  __main__.py  requirements.txt
tools/: bootstrap.sh  install_pyenv.sh
(+6 files in other folders)
