[tool.poetry]
name = "reviews-api"
version = "0.1.0"
description = "A simple reviews service"
authors = ["jcla490 <jclark754@gmail.com>"]
packages = [{ include = "api" }]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"
piccolo = "^1.2.0"
piccolo-api = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.pycln]
all = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
